# hermes-vault-memory

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sitecustomize.py
docs/plans/: 2026-04-30-hardening-and-reliability.md
fixtures/sample-vault/: dokploy-setup.md  semantic-memory.md
scripts/: smoke.py
src/hermes_vault_memory/: __init__.py  chunking.py  cli.py  config.py  service.py
tests/: test_compose.py  test_config.py  test_index_search.py  test_security.py  test_server.py
tests/support/: __init__.py  fakes.py
